test/functions/errors/ambiguous_what_function_to_call_2.dmd
function add(a, b)
    return a + b

function add(a, b)
    return a * b

function awesome(a, b)
    print(add(a, b))

awesome(4, 2)

--- Output
Type mismatch

8|     print(add(a, b))
             ^^^
Here 'add'  can refer to:
    1| function add(a, b)
    4| function add(a, b)

Called from:
    test/functions/errors/ambiguous_what_function_to_call_2.dmd: 10| awesome(a: int64, b: int64)

---